--- a/public/test.html
+++ b/public/test.html
@@ -3,10 +3,12 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>Eat A Burger</title>
+	<title>I Can't RTFM</title>
 	<!-- Latest compiled and minified CSS & JS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/burger_style.css" media="screen" title="no title">
+	<link rel="stylesheet" href="assets/css/style.css" media="screen" title="no title">
+
+
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
@@ -21,20 +23,22 @@
 			<div class="col-md-6 col-md-offset-3">
 				<ul class="list-group todo-list">
 					<li class="list-group-item new-item">
-						<form id="burger-form">
-						<input class="new-item" placeholder="Order a Burger" type="text" />
-						<button type="submit" class="btn btn-default">Order Now</button>
+						<form id="search-form">
+						<input class="new-item" placeholder="Search Terms" type="text" />
+						<button type="submit" class="btn btn-default">Search</button>
 						</form>
 					</li>
-					<span class="burger-container">
+					<span class="search-container">
 					</span>
 				</ul>
 			</div>
 		</div>
 	</div>
 	<!-- Custom Script -->
-	<script src="assets/javascript/burger.js" type="text/javascript"></script>
+	<!-- <script src="assets/javascript/script.js" type="text/javascript"></script> -->
 
+	<!--  Add handlebars templates for browser side handlebars expansion below -->
+	<!--  If utilized, look into alternate methods of precompiling templates   -->
 	<script id="burger-template" type="x-handlebars-template">
 		{{#each burgers}}
 			<li data-id={{this.id}} class="list-group-item burger-item">
