changed relative pathing to from ../public/assets to ./assets

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
      <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Tinos:400i" rel="stylesheet">
-    <link rel="stylesheet" href="../public/assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
   </head>
   <body>
     <div class="container">
@@ -36,7 +36,7 @@
      <!--Search Container-->
      <div class="row">
        <div class="col-md-4">
-         <img class="smallimg" src="../public/assets/images/08.jpg" alt="Coding Image">
+         <img class="smallimg" src="./assets/images/08.jpg" alt="Coding Image">
        </div>
        <div class="col-md-6">
          <div class="center padding">
@@ -71,7 +71,7 @@
           <!--Stack Overflow Icon-->
           <div class="row">
             <div class="col-md-6">
-              <img src="../public/assets/images/stack-overflow.png" alt="Stack Overflow Image"
+              <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image"
               class="centerimg" id="stack-div-show">
               <div class="verticalhr">
                 &nbsp;
@@ -82,7 +82,7 @@
             </div>
             <!--Documentation Icon-->
             <div class="col-md-6" id="documentation-div">
-              <img src="../public/assets/images/documentation.png" alt="Documentation Image"
+              <img src="./assets/images/documentation.png" alt="Documentation Image"
               class="centerimg" id="documentation-show">
               <!--Empty Documentation Search Results Div-->
               <div class="col-md-6 hidden">
@@ -98,9 +98,9 @@
          <div id="footer" class="center padding">
            <div class="container">
              <div class="right">
-               <img class="center social" src="../public/assets/images/facebook.png" alt="FaceBook Log">
-               <img class="center social" src="../public/assets/images/instagram.png" alt="Instagram Logo">
-               <img class="center social" src="../public/assets/images/twitter.png" alt="Twitter Logo">
+               <img class="center social" src="./assets/images/facebook.png" alt="FaceBook Log">
+               <img class="center social" src="./assets/images/instagram.png" alt="Instagram Logo">
+               <img class="center social" src="./assets/images/twitter.png" alt="Twitter Logo">
              </div>
              <div class="padding">
                <p>© 2017 Simplify My Code</p>
