--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,15 @@
     <title>Simplify My Code</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
       integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/fuzzycomplete.min.css">
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
       integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
       integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="./assets/javascript/modules/fuse.min.js" type="text/javascript"></script>
+    <script src="./assets/javascript/modules/fuzzycomplete.js" type="text/javascript"></script>
      <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Tinos:400i" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
@@ -56,9 +59,9 @@
            </div>
            <!--Search Box-->
            <div class="input-group padding">
-             <input type="text" id="entersearch" class="form-control" placeholder="Enter code here...">
+             <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
               <span class="input-group-btn">
-                <button class="btn btn-default" id="searchbox" type="button">Go!</button>
+                <button class="btn btn-default" id="search-submit" type="button">Go!</button>
               </span>
           </div>
         </div>
@@ -77,18 +80,20 @@
                 &nbsp;
               </div>
               <!--Empty Stack Overflow Search Results Div-->
-              <div class="col-md-6 hidden" id="stack-div">
-              </div>
             </div>
             <!--Documentation Icon-->
-            <div class="col-md-6" id="documentation-div">
+            <div class="col-md-6">
               <img src="./assets/images/documentation.png" alt="Documentation Image"
-              class="centerimg" id="documentation-show">
-              <!--Empty Documentation Search Results Div-->
-              <div class="col-md-6 hidden">
-              </div>
+                class="centerimg" id="documentation-show">
             </div>
           </div>
+
+          <!--Empty Search Results Div-->
+          <div class="row">
+            <div class="col-md-6 hidden leftDiv" id="stack-div"> </div>
+            <div class="col-md-6 hidden rightDiv" id="documentation-div"></div>
+          </div>
+
         </div>
       </div>
     </div>
@@ -115,7 +120,8 @@
             $('.dropdown-toggle').dropdown();
         });
    </script> -->
-   <script src='./assets/javascript/search.js'></script>
+   <!-- <script src='./assets/javascript/search.js'></script> -->
+   <script src='./assets/javascript/test-search.js'></script>
    <!--Showing and hiding the Search Results div elements-->
   </body>
 </html>
