Added output of temp html file to show express documentation responses

--- a/public/test-search.html
+++ b/public/test-search.html
@@ -23,7 +23,7 @@
 
     <h3>Express JS API Search</h3>
     <p>
-      <label for="search-express">Search:</label> <input type="text" id="search-express" name="search">
+      <label for="search-express">Search:</label> <input type="text" id="search-input" name="search">
       <button class="btn btn-default" id="search-submit" type="button">Go!</button>
     </p>
 
@@ -38,9 +38,9 @@
         <label for="search-express">Search:</label> <input type="text" id="search-express" name="search">
         <button class="btn btn-default" id="search-submit" type="button">Go!</button>
       </p> -->
-      <div id="methods-list"></div>
+      <div id="stack-div"></div>
     </div>
-    <div class="col-md-8" id="docs-div" class="right"></div>
+    <div class="col-md-8" id="documentation-div" class="right"></div>
   </div>
 
 
