--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>Simplify My Code</title>
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-      integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Tinos:400i" rel="stylesheet">
+
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
     <link rel="stylesheet" href="./assets/css/fuzzycomplete.min.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"
-      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js" type="text/javascript"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-      integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-      integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+     <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
+
     <script src="./assets/javascript/modules/fuse.min.js" type="text/javascript"></script>
     <script src="./assets/javascript/modules/fuzzycomplete.js" type="text/javascript"></script>
-     <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Tinos:400i" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+    <script src="./assets/javascript/search.js" type="text/javascript"></script>
+
+
   </head>
   <body>
     <div class="container">
@@ -73,27 +81,25 @@
         <div id="searchresult">
           <!--Stack Overflow Icon-->
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" id="stack-div">
               <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image"
               class="centerimg" id="stack-div-show">
               <div class="verticalhr">
                 &nbsp;
               </div>
               <!--Empty Stack Overflow Search Results Div-->
+              <div class="col-md-6 hidden" id="stack-div">
+              </div>
             </div>
             <!--Documentation Icon-->
-            <div class="col-md-6">
+            <div class="col-md-6" id="documentation-div">
               <img src="./assets/images/documentation.png" alt="Documentation Image"
-                class="centerimg" id="documentation-show">
+              class="centerimg" id="documentation-show">
+              <!--Empty Documentation Search Results Div-->
+              <div class="col-md-6 hidden">
+              </div>
             </div>
           </div>
-
-          <!--Empty Search Results Div-->
-          <div class="row">
-            <div class="col-md-6 hidden leftDiv" id="stack-div"> </div>
-            <div class="col-md-6 hidden rightDiv" id="documentation-div"></div>
-          </div>
-
         </div>
       </div>
     </div>
@@ -115,13 +121,28 @@
        </div>
      </div>
     </div>
-    <!-- <script type="text/javascript">
-        $(document).ready(function () {
-            $('.dropdown-toggle').dropdown();
-        });
-   </script> -->
-   <!-- <script src='./assets/javascript/search.js'></script> -->
-   <script src='./assets/javascript/test-search.js'></script>
+
    <!--Showing and hiding the Search Results div elements-->
+   <!-- <script>
+       $(document).ready(function(){
+       $("#searchbox").click((function(){
+       $("#stack-div").show();
+       $("#documentation-div").show();
+       $("#stack-div").removeClass("hidden");
+       $("#documentation-div").removeClass("hidden");
+       $("#stack-div-show").addClass("hidden");
+       $("#documentation-show").addClass("hidden");
+     }))
+    });
+$('#searchbox').on('click', function() {
+  console.log("clicked"); -->
+  <!-- // $.ajax({
+  //   url: "/api/stack/search/" + $("#enterSearch").val(),
+  //   success: function(result){
+  //     $("#searchInfo").html(result)
+  // }});
+}) -->
+
+   <!-- </script> -->
   </body>
 </html>
