--- a/public/test-search.html
+++ b/public/test-search.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
   <link rel="stylesheet" href="./assets/css/fuzzycomplete.min.css">
-  <link rel="stylesheet" href="./assets/css/test-search.css">
+  <!-- <link rel="stylesheet" href="./assets/css/test-search.css"> -->
 
   <script src="https://code.jquery.com/jquery-2.2.3.min.js" type="text/javascript"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
   <script src="./assets/javascript/modules/fuse.min.js" type="text/javascript"></script>
   <script src="./assets/javascript/modules/fuzzycomplete.js" type="text/javascript"></script>
-  <script src="./assets/javascript/test-search.js" type="text/javascript"></script>
+  <script src="./assets/javascript/search.js" type="text/javascript"></script>
 
 </head>
 <body>
