--- a/public/index.html
+++ b/public/index.html
@@ -70,28 +70,30 @@
     <!--Search Results Div-->
     <div class="row padding">
       <div class="col-lg-12">
-        <div id="searchresult">
+        <div class="container" id="searchresult">
           <!--Stack Overflow Icon-->
           <div class="row">
-            <div class="col-md-6">
+            <!--Left section-->
+            <div class="col-6 center">
               <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image"
               class="centerimg" id="stack-div-show">
-              <div class="verticalhr">
+              <!--<div class="verticalhr">
                 &nbsp;
-              </div>
+              </div>-->
               <!--Empty Stack Overflow Search Results Div-->
             </div>
             <!--Documentation Icon-->
-            <div class="col-md-6">
+            <div class="col-6 center">
               <img src="./assets/images/documentation.png" alt="Documentation Image"
-                class="centerimg" id="documentation-show">
+                 class="centerimg" id="documentation-show">
             </div>
           </div>
 
           <!--Empty Search Results Div-->
           <div class="row">
-            <div class="col-md-6 hidden leftDiv" id="stack-div"> </div>
-            <div class="col-md-6 hidden rightDiv" id="documentation-div"></div>
+            <div class="col-6 hidden leftDiv" id="stack-div">
+            </div>
+            <div class="col-6 hidden rightDiv" id="documentation-div"></div>
           </div>
 
         </div>
