--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <script src="./assets/javascript/modules.js" type="text/javascript"></script>
     <!-- <script src="./assets/javascript/templates.js" type="text/javascript"></script> -->
     <script src="./assets/javascript/search.js" type="text/javascript"></script>
+    <script src="//localhost:35729/livereload.js"></script>
 
 
   </head>
