added button to clear search input and handler.

--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,9 @@
            <div class="input-group padding">
              <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
               <span class="input-group-btn">
-                <button class="btn btn-default" id="search-submit" type="button">Go!</button>
+                <button class="btn btn-default" id="search-submit" type="button">Submit</button>
+                <button class="btn btn-danger" id="search-clear" type="button">Clear</button>
+
               </span>
           </div>
         </div>
