Added jquery api scraping functionality (in progress). Will not display both at once in production version. Updated stack search to use advanced form to allow longer queries.  May need to review whether we search only title or title and body. Updated css and handlebars for showing/hiding information.

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
              <ul class="dropdown-menu" aria-labelledby="dropdownmenu1">
                <li><a href="#">Express</a></li>
                <li><a href="#">JavaScript</a></li>
-               <li><a href="#">Something else here</a></li>
+               <li><a href="#">JQuery</a></li>
                <li role="separator" class="divider"></li>
                <li><a href="#">Separated link</a></li>
              </ul>
@@ -105,9 +105,11 @@
 
           <!--Empty Search Results Div-->
           <div class="row">
-            <div class="col-6 hidden leftDiv" id="stack-div">
+            <div class="col-4 hidden leftDiv" id="stack-div">
             </div>
-            <div class="col-6 hidden rightDiv" id="documentation-div">
+            <div class="col-4 hidden rightDiv" id="documentation-div">
+            </div>
+            <div class="col-4 hidden rightDiv" id="jquery-div">
             </div>
           </div>
 
