fixed drop down menu and changed css

--- a/public/index.html
+++ b/public/index.html
@@ -56,27 +56,12 @@
        <div class="col-md-6">
          <div class="center padding">
            <!-- Language Drop Down -->
-           <select id="language-select" class="custom-select">
-                 <option value="Choose a topic">
-                   Choose a topic
-                 </option>
+              <select id="language-select" class="custom-select">
+                 <option selected>Choose a topic</option>
                  <option value="express">Express</option>
                  <option value="jquery">jQuery</option>
                  <option value="javascript">Javascript</option>
-           </select>
-           <!-- <div class="dropdown">
-             <button type="button" id="dropdownmenu1" class="btn btn-default dropdown-toggle"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-               Action <span class="caret"></span>
-             </button>
-             <ul class="dropdown-menu" id="theDrop" aria-labelledby="dropdownmenu1">
-               <li><a href="#">Express</a></li>
-               <li><a href="#">JavaScript</a></li>
-               <li><a href="#">JQuery</a></li>
-               <li role="separator" class="divider"></li>
-               <li><a href="#">Separated link</a></li>
-             </ul>
-           </div> -->
+               </select>
            <!--Search Box-->
            <div class="input-group padding">
              <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
