--- a/public/index.html
+++ b/public/index.html
@@ -79,32 +79,17 @@
     <div class="row padding">
       <div class="col-lg-12">
         <div class="container" id="searchresult">
-          <!--Stack Overflow Icon-->
+
+          <!-- Search Results Div-->
           <div class="row">
-            <!--Left section-->
-            <div class="col-6">
+            <div class="col-6 leftDiv" id="stack-div">
               <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image"
               class="centerimg" id="stack-div-show">
             </div>
-              <!--<div class="verticalhr">
-                &nbsp;
-              </div>-->
-              <!--Empty Stack Overflow Search Results Div-->
-            <!--Documentation Icon-->
-            <div class="col-6">
+            <div class="col-6 rightDiv" id="documentation-div">
               <img src="./assets/images/documentation.png" alt="Documentation Image"
                  class="centerimg" id="documentation-show">
             </div>
-          </div>
-
-          <!--Empty Search Results Div-->
-          <div class="row">
-            <div class="col-6 hidden leftDiv" id="stack-div">
-            </div>
-            <div class="col-6 hidden rightDiv" id="documentation-div">
-            </div>
-            <!-- <div class="col-4 hidden rightDiv" id="jquery-div">
-            </div> -->
           </div>
 
         </div>
