--- a/public/index.html
+++ b/public/index.html
@@ -1,79 +1,72 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Simplify My Code</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css"
-    integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Tinos:400i" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <title>Simplify My Code</title>
 
-    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
-    <link rel="stylesheet" href="./assets/css/fuzzycomplete.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Tinos:400i" rel="stylesheet">
 
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+  <link rel="stylesheet" href="./assets/css/fuzzycomplete.min.css">
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js"
-    integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js" type="text/javascript"></script>
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js"
-    integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-     <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
-     <!-- Handlebars browser-side -->
-	  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.8/handlebars.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb"
+    crossorigin="anonymous"></script>
 
-    <!-- IMPORT THE CONCATENATED MODULES.JS (ALL JS FILES IN MODULES) -->
-    <script src="./assets/javascript/modules.js" type="text/javascript"></script>
-    <!-- <script src="./assets/javascript/templates.js" type="text/javascript"></script> -->
-    <script src="./assets/javascript/search.js" type="text/javascript"></script>
-    <script src="//localhost:35729/livereload.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
+    crossorigin="anonymous"></script>
+  <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
+  <!-- Handlebars browser-side -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.8/handlebars.min.js"></script>
+
+  <!-- IMPORT THE CONCATENATED MODULES.JS (ALL JS FILES IN MODULES) -->
+  <script src="./assets/javascript/modules.js" type="text/javascript"></script>
+  <!-- <script src="./assets/javascript/templates.js" type="text/javascript"></script> -->
+  <script src="./assets/javascript/search.js" type="text/javascript"></script>
+  <script src="//localhost:35729/livereload.js"></script>
 
 
-  </head>
-  <body>
-    <div class="container">
-      <!--Header Row-->
-      <nav class="navbar-brand navbar-default navbar-text">
-        <div class="row">
-          <!--Logo-->
-          <div class="col-lg-6 left logo">
-            <p>Simplify My Code</p>
-          </div>
-          <!--Tagline-->
-          <div class="col-lg-6 right" id="tagline">
-            <p>"I can't RTFM!"</p>
-          </div>
-       </div>
-     </nav>
-    <!--Divider-->
-     <div class="borderbtm">
-     </div>
-     <!--Search Container-->
-     <div class="row">
-       <div class="col-md-4">
-         <img class="smallimg" src="./assets/images/08.jpg" alt="Coding Image">
-       </div>
-       <div class="col-md-6">
-         <div class="center padding">
-           <!-- Language Drop Down -->
-              <select id="language-select" class="custom-select">
+</head>
+
+<body>
+  <nav class="navbar navbar-light bg-faded">
+    <h1 class="navbar-brand mb-0 h1-style">Simplify My Code</h1>
+    <h1 class="right h1-style" id="tagline">"I can't RTFM!"</h1>
+  </nav>
+  <div class="jumbotron jumbotron-fluid">
+    <div class="row">
+      <div class="col-md-4">
+        <img class="smallimg" src="./assets/images/08.jpg" alt="Coding Image">
+      </div>
+      <div class="col-md-6">
+        <div class="center padding">
+          <!-- Language Drop Down -->
+          <select id="language-select" class="custom-select">
                  <option selected>Choose a topic</option>
                  <option value="express">Express</option>
                  <option value="jquery">jQuery</option>
                  <option value="javascript">Javascript</option>
                </select>
-           <!--Search Box-->
-           <div class="input-group padding">
-             <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
-              <span class="input-group-btn">
+          <!--Search Box-->
+          <div class="input-group padding">
+            <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
+            <span class="input-group-btn">
                 <button class="btn btn-default" id="search-submit" type="button">Submit</button>
                 <button class="btn btn-danger" id="search-clear" type="button">Clear</button>
-
               </span>
           </div>
         </div>
       </div>
     </div>
+  </div>
+  <div class="container">
+
+    <!--Search Container-->
+
     <!--Search Results Div-->
     <div class="row padding">
       <div class="col-lg-12">
@@ -82,17 +75,12 @@
           <div class="row">
             <!--Left section-->
             <div class="col-6">
-              <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image"
-              class="centerimg" id="stack-div-show">
+              <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image" class="centerimg" id="stack-div-show">
             </div>
-              <!--<div class="verticalhr">
-                &nbsp;
-              </div>-->
-              <!--Empty Stack Overflow Search Results Div-->
+            <!--Empty Stack Overflow Search Results Div-->
             <!--Documentation Icon-->
             <div class="col-6">
-              <img src="./assets/images/documentation.png" alt="Documentation Image"
-                 class="centerimg" id="documentation-show">
+              <img src="./assets/images/documentation.png" alt="Documentation Image" class="centerimg" id="documentation-show">
             </div>
           </div>
 
@@ -110,23 +98,24 @@
       </div>
 
     </div>
-     <!--Footer-->
-     <div class="row">
-       <div class="col-lg-12">
-         <div id="footer" class="center padding">
-           <div class="container">
-             <div class="right">
-               <img class="center social" src="./assets/images/facebook.png" alt="FaceBook Log">
-               <img class="center social" src="./assets/images/instagram.png" alt="Instagram Logo">
-               <img class="center social" src="./assets/images/twitter.png" alt="Twitter Logo">
-             </div>
-             <div class="padding">
-               <p>© 2017 Simplify My Code</p>
-             </div>
+    <!--Footer-->
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="footer" class="center padding">
+          <div class="container">
+            <div class="right">
+              <img class="center social" src="./assets/images/facebook.png" alt="FaceBook Log">
+              <img class="center social" src="./assets/images/instagram.png" alt="Instagram Logo">
+              <img class="center social" src="./assets/images/twitter.png" alt="Twitter Logo">
+            </div>
+            <div class="padding">
+              <p>© 2017 Simplify My Code</p>
+            </div>
           </div>
-         </div>
-       </div>
-     </div>
+        </div>
+      </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
