--- a/public/index.html
+++ b/public/index.html
@@ -36,24 +36,23 @@
   <div class="row">
     <div class="col-md-4">
   <nav class="navbar navbar-light bg-faded">
-    <h1 class="navbar-brand mb-0 h1-style">Simplify My Code</h1>
+    <h1 class="navbar-brand mb-0 h1-style"><span id ="blue">Simplify</span><span id="green">My</span><span id="red">Code</span></h1>
     </div>
     <div class="col-md-8">
-                <select id="language-select" class="custom-select">
-                 <option selected>Choose a topic</option>
-                 <option value="express">Express</option>
-                 <option value="jquery">jQuery</option>
-                 <option value="javascript">Javascript</option>
-               </select>
+          <select id="language-select" class="custom-select">
+           <option selected>Choose a topic</option>
+           <option value="express">Express</option>
+           <option value="jquery">jQuery</option>
+           <option value="javascript">Javascript</option>
+         </select>
               <div class="input-group">
             <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
-            
+
                 <button class="btn btn-default btn-sm" id="search-submit" type="button">Submit</button>
-                <button class="btn btn-danger btn-sm" id="search-clear" type="button">Clear</button>
-           
+
           </div>
   </div>
-    <h1 class="right h1-style" id="tagline">"I can't RTFM!"</h1>
+    <h1 class="right h1-style" id="tagline"><span id="quote">"</span><span id="blue">I </span><span id="green">can't </span><span id="red">RTFM!</span><span id="quote">"</span> </h1>
   </div>
   </nav>
   <div>
