changed camelCase to  dash-case for leftDiv/rightDiv

--- a/public/index.html
+++ b/public/index.html
@@ -102,12 +102,12 @@
                  class="centerimg" id="documentation-show">
  -->
             <!--Left section-->
-            <div id="stack-div" class="col-6">
+            <div id="stack-div" class="col-6 left-div">
               <img src="./assets/images/stack-overflow.png" alt="Stack Overflow Image" class="centerimg" id="stack-div-show">
             </div>
             <!--Empty Stack Overflow Search Results Div-->
             <!--Documentation Icon-->
-            <div id="documentation-div" class="col-6">
+            <div id="documentation-div" class="col-6 right-div">
               <img src="./assets/images/documentation.png" alt="Documentation Image" class="centerimg" id="documentation-show">
             </div>
           </div>
