--- a/public/index.html
+++ b/public/index.html
@@ -33,9 +33,9 @@
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-md-4">
-      <nav class="navbar navbar-light bg-faded">
+      <nav class="navbar fixed-top navbar-light bg-faded">
+        <div class="row">
+          <div class="col-md-4">
         <h1 class="navbar-brand mb-0 h1-style"><span id ="blue">Simplify</span><span id="green">My</span><span id="red">Code</span></h1>
     </div>
 
@@ -55,9 +55,8 @@
   </div>
 
     <h1 class="right h1-style" id="tagline"><span id="quote">"</span><span id="blue">I </span><span id="green">can't </span><span id="red">RTFM!</span><span id="quote">"</span> </h1>
-    
-  </nav>
 </div>
+</nav>
 
   <div class="container">
 
@@ -86,6 +85,7 @@
 
     </div>
     <!--Footer-->
+    <nav class="navbar fixed-bottom navbar-light bg-faded">
     <div class="row">
       <div class="col-lg-12">
         <div id="footer" class="center padding">
@@ -102,6 +102,7 @@
         </div>
       </div>
     </div>
+  </nav>
   </div>
 </body>
 
