--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
 
     <div class="input-group">
       <input type="text" id="search-input" class="form-control" placeholder="Enter code here...">
-          <button class="btn btn-default btn-sm" id="search-submit" type="button">Submit</button>
+          <button class="btn btn-default btn-sm" id="search-submit" type="button"><strong>Submit</strong></button>
     </div>
 
   </div>
@@ -96,7 +96,7 @@
               <img class="center social" src="./assets/images/twitter.png" alt="Twitter Logo">
             </div>
             <div class="padding">
-              <p>© 2017 Simplify My Code</p>
+              <p id="footer">© 2017 Simplify My Code</p>
             </div>
           </div>
         </div>
