Added modal display for jquery detail and examples

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
 
     <div class="col-md-8">
         <select id="language-select" class="custom-select">
-         <option selected>Choose a topic</option>
+         <option value="" selected>Choose a topic</option>
          <option value="express">Express</option>
          <option value="jquery">jQuery</option>
          <option value="javascript">Javascript</option>
@@ -103,6 +103,10 @@
       </div>
     </div>
   </nav>
+  </div>
+
+  <div id="modal-div"> </div>
+
   </div>
 </body>
 
